<resources>
    <string name="app_name" translatable="false">BusGo</string>
    <string name="string_lineas">Lineas:</string>
    <string name="home" translatable="false">Home</string>
    <string name="home_title">Busqueda individual</string>
    <string name="lines">Líneas</string>
    <string name="stops">Paradas</string>
    <string name="map">Mapa</string>
    <string name="settings">Ajustes</string>
    <string name="string_stops">Parada:</string>
    <string name="settings_themeTittle">Tema</string>
    <string name="settings_languageTittle">Idioma</string>
    <string name="settings_initialScreenTittle">Pantalla de inicio</string>
    <string name="settings_launcherOptionsTittle">Configuracion del lanzador</string>
    <string name="settings_option_initialScreen_home">Home (Por defecto)</string>
    <string name="settings_option_initialScreen_map">Mapa</string>
    <string name="settings_option_initialScreen_stops">Paradas</string>
    <string name="settings_option_initialScreen_lines">Lineas</string>
    <string name="settings_option_language_spanish">Español</string>
    <string name="settings_option_language_english">Ingles</string>
    <string name="settings_option_language_galician">Gallego</string>
    <string name="settings_option_theme_blackTheme">Oscuro</string>
    <string name="settings_option_theme_whiteTheme">Claro</string>
    <string name="settings_option_theme_systemTheme">Sistema</string>
    <string name="settings_option_launcherOptions_showFavoriteStops">Mostrar paradas favoritas</string>
    <string name="settings_option_launcherOptions_showCloseStops">Mostrar paradas cercanas</string>
    <string name="settings_option_launcherOptions_numberOfCloseStops">Nº de paradas cercanas a mostrar</string>
    <string name="settings_option_launcherOptions_numberOfFavoriteStops">Nº de paradas favoritas a mostrar</string>
    <string name="et_buscar">Introduce un id</string>
    <string name="bt_search_string">Buscar</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="stopsWidgetUndefinedStopsText">Sincroniza el widget con una parada</string>
    <string name="stopsWidgetUndefinedStopsButtonText">+</string>
    <string name="stopsWidgetStopName">Campus Elviña</string>
    <string name="stopsWidgetStopNameAccDesc">Nombre de la parada</string>
    <string name="stopsWidgetLineNumber">24A</string>
    <string name="stopsWidgetLineNumberAccesDesc">Número de línea del próximo autobús</string>
    <string name="stopsWidgetTimeRemainingAccesDesc">Tiempo restante para el próximo autobús</string>
    <string name="stopsWidgetTimeRemaining">5 minutos</string>
    <string name="stopsWidgetUpdateButton">X</string>
    <string name="stopsWidgetUpdateButtonAccesDesc">Botón para actualizar la información del widget</string>
    <string name="settings_showUserGuide">Mostrar guia de usuario\n(Requiere reinicio)</string>
    <string name="settings_showUserGuideButtonText">Mostrar</string>
    <string name="userGuideMapTabTitle">Mapa</string>
    <string name="userGuideMapTabText">Busca rutas visualmente apoyandote en un mapa.</string>
    <string name="userGuideStopsTabTitle">Paradas</string>
    <string name="userGuideHomeTabTitle" translatable="false">Home</string>
    <string name="userGuideLinesTabTitle">Lineas</string>
    <string name="userGuideSettingsTabTitle">Ajustes</string>
    <string name="userGuideStopsTabText">Visualiza las paradas.</string>
    <string name="userGuideHomeTabText">Visualiza paradas cercanas y favoritas</string>
    <string name="userGuideLinesTabText">Visualiza las lineas</string>
    <string name="userGuideSettingsTabText">Configura la aplicación a tu gusto</string>
    <string name="title_activity_google_maps">GoogleMapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map_id">cf896573b56113e1</string>
    <string name="setOriginMarker">Colocar origin</string>
    <string name="setDestinationMarker">Colocar destino</string>
    <string name="BuscarRutas">Buscar rutas</string>
    <string name="string_paradas">Paradas:</string>
    <string name="string_coords">Coordenadas:</string>
    <string name="string_conect_lines">Líneas que conecta:</string>
    <string name="string_line_separator">-</string>
    <string name="calcular_rutas">Calcular rutas</string>
    <string name="showPreviousLineButton"><![CDATA[<]]></string>
    <string name="lineName" />
    <string name="showNextLineButton"><![CDATA[>]]></string>

</resources>