<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".tabs.SettingsTab">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/settings_layout_bg"
                android:orientation="vertical"
                android:layout_marginTop="15sp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_languageTittle"
                    android:layout_marginStart="20sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioGroupLanguageId"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/settings_toggle_language_spanish"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_option_language_spanish"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/settings_toggle_language_english"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_option_language_english"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/settings_toggle_language_galician"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/settings_option_language_galician"
                            android:textColor="@color/white" />

                    </RadioGroup>

                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="12dp"
                android:background="@drawable/settings_layout_bg"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_themeTittle"
                    android:layout_marginStart="20sp"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioGroupThemeId"
                        android:orientation="vertical">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/settings_toggle_theme_whiteTheme"
                            android:text="@string/settings_option_theme_whiteTheme"
                            android:textColor="@color/white"
                            />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/settings_toggle_theme_blackTheme"
                            android:text="@string/settings_option_theme_blackTheme"
                            android:textColor="@color/white"
                            />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"

                            android:id="@+id/settings_toggle_theme_systemTheme"
                            android:text="@string/settings_option_theme_systemTheme"
                            android:textColor="@color/white"
                            />

                    </RadioGroup>

                </LinearLayout>
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="12dp"
                android:background="@drawable/settings_layout_bg"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_initialScreenTittle"
                    android:layout_marginStart="20sp"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/settings_toggle_initialScreen_map"
                            android:text="@string/settings_option_initialScreen_map"
                            android:textColor="@color/white"
                            />
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/settings_toggle_initialScreen_stops"
                            android:text="@string/settings_option_initialScreen_stops"
                            android:textColor="@color/white"
                            />
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/settings_toggle_initialScreen_lines"
                            android:text="@string/settings_option_initialScreen_lines"
                            android:textColor="@color/white"
                            />
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/settings_toggle_initialScreen_home"
                            android:checked="true"
                            android:text="@string/settings_option_initialScreen_home"
                            android:textColor="@color/white"
                            />

                    </RadioGroup>


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="12dp"
                android:background="@drawable/settings_layout_bg"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_launcherOptionsTittle"
                    android:layout_marginStart="20sp"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/settings_toggle_launcherOptions_showFavoriteStops"
                        android:checked="true"
                        android:text="@string/settings_option_launcherOptions_showFavoriteStops"
                        android:textColor="@color/white"
                        />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberDecimal"
                        android:hint="@string/settings_option_launcherOptions_numberOfFavoriteStops"
                        android:textColor="@color/white" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/settings_toggle_launcherOptions_showCloseStops"
                        android:checked="true"
                        android:text="@string/settings_option_launcherOptions_showCloseStops"
                        android:textColor="@color/white"
                        />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberDecimal"
                        android:hint="@string/settings_option_launcherOptions_numberOfCloseStops"
                        android:textColor="@color/white" />


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="12dp"
                android:background="@drawable/settings_layout_bg"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_showUserGuide"
                    android:layout_marginStart="20sp"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_showUserGuideButtonText"
                        android:id="@+id/settings_showUserGuideButtonId">
                    </Button>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>









</LinearLayout>